# instance-data-test

./: README.md  app.js  worker.js
my-lib/: Cargo.toml  README.md  package-lock.json  package.json
my-lib/src/: lib.rs
